[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cavefinder-auth"
# 0.2.0.1 (2026-06-13): SECURITY maintenance patch of the 0.2.0 sync+WebSocket
# lineage (the lineage CaveLog pins; the main line diverged to async at 0.2.1+).
# Keys the auth-bypass public-path check (and the _wants_json /api/ check) on the
# raw ASGI scope["path"] instead of the Host-poisonable request.url.path
# (CVE-2026-48710 "BadHost"). Same fix as canonical v0.2.5; carried here so the
# WebSocket-capable lineage stays available without regressing to async.
version = "0.2.0.1"
description = "Shared JWT verification + FastAPI middleware for CaveFinder Identity Provider client apps (georef, surveylens, cavefinder)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "CaveFinder", email = "team@cavefinder.app" }]
dependencies = [
  "pyjwt[crypto]>=2.8",
  "cryptography>=41",
  "httpx>=0.25",
  "starlette>=0.36",
]

[project.optional-dependencies]
testing = ["pytest>=8", "pytest-asyncio>=0.23", "fastapi>=0.110"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cavefinder_auth = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
